--- a/webcam/index.html
+++ b/webcam/index.html
@@ -1,16 +1,117 @@
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Image Classification with ml5.js</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+</head>
+<body>
+    <script>
+        let mobilenet;
+        let video;
+        let label = '';
+
+        function modelReady() {
+            console.log('Model is ready!!!');
+            mobilenet.predict(gotResults);
+        }
+
+        function gotResults(error, results) {
+            if (error) {
+                console.error(error);
+            } else {
+                console.log(results);
+                label = results[0].className;
+                //let prob = results[0].probability;
+                mobilenet.predict(gotResults);
+            }
+        }
+
+        function setup() {
+            createCanvas(640, 480);
+            video = createCapture(VIDEO);
+            video.hide();
+            background(0);
+            mobilenet = ml5.imageClassifier('MobileNet', video, modelReady);
+        }
+
+        function draw() {
+            image(video, 0, 0);
+            fill(0);
+            textSize(32);
+            text(label, 10, height - 100);
+        }
+    </script>
+</body>
+</html> -->
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Getting Started with ml5.js</title>
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Automatic Goal Completion</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
-  </head>
+</head>
+<body>
+    <p>Goal: Drink Water</p>
+    <p>Status: <span id="status">Not Completed</span></p>
+    <video id="video" width="640" height="480" autoplay></video>
 
-  <body>
     <script>
-      // Your code will go here
-      // open up your console - if everything loaded properly you should see the correct version number
-      console.log('ml5 version:', ml5.version);
+        let mobilenet;
+        let goalCompleted = false;
+
+        async function modelReady() {
+            console.log('Model is ready!!!');
+            mobilenet.predict(gotResults);
+        }
+
+        async function gotResults(error, results) {
+            if (error) {
+                console.error(error);
+            } else {
+                console.log(results);
+                if (results && results.length > 0 && results[0].label) {
+                    const label = results[0].label;
+                    console.log('Detected label:', label);
+
+                    // Check if the goal is detected
+                    if (label.toLowerCase().includes('water')) {
+                        document.getElementById('status').innerText = 'Completed';
+                        goalCompleted = true;
+                    } else {
+                        document.getElementById('status').innerText = 'Not Completed';
+                    }
+                }
+
+                // Call predict again
+                if (!goalCompleted) {
+                    mobilenet.predict(gotResults);
+                }
+            }
+        }
+
+        function setup() {
+            createCanvas(640, 480);
+            const video = createCapture(VIDEO, () => {
+                console.log('Video is ready!!!');
+                video.hide(); // Hide the video element after it's initialized
+                background(0); // Draw a background after hiding the video
+                mobilenet = ml5.imageClassifier('MobileNet', video, modelReady);
+            });
+        }
+
+        function draw() {
+            // This function is empty as we're not actively drawing anything
+            // The video frame is drawn automatically by p5.js
+        }
     </script>
-  </body>
+</body>
 </html>
+
+
+
