--- a/webcam/index.html
+++ b/webcam/index.html
@@ -3,93 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Classification with ml5.js</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
-</head>
-<body>
-    <p>Goal: Drink Water</p>
-    <p>Status: <span id="status">Not Completed</span></p>
-    <video id="video" width="640" height="480" autoplay></video>
-
-    <script>
-        let mobilenet;
-        let video;
-        let label = '';
-        let goalCompleted = false;
-
-        function modelReady() {
-            console.log('Model is ready!!!');
-            mobilenet.predict(gotResults);
-        }
-
-        function gotResults(error, results) {
-            if (error) {
-                console.error(error);
-            } else {
-                console.log(results);
-                if (results && results.length > 0 && results[0].label) {
-                    const label = results[0].label;
-                    console.log('Detected label:', label);
-
-                    // Check if the goal is detected
-                    if (label.toLowerCase().includes('water')) {
-                        document.getElementById('status').innerText = 'Completed';
-                        goalCompleted = true;
-                    } else {
-                        document.getElementById('status').innerText = 'Not Completed';
-                    }
-                }
-
-                // Call predict again
-                if (!goalCompleted) {
-                    mobilenet.predict(gotResults);
-                }
-            }
-        }
-
-        function setup() {
-            createCanvas(640, 480);
-            video = createCapture(VIDEO);
-            video.hide();
-            background(0);
-            mobilenet = ml5.imageClassifier('MobileNet', video, modelReady);
-        }
-
-        function draw() {
-            image(video, 0, 0);
-            fill(0);
-            textSize(32);
-            text(label, 10, height - 100);
-        }
-    </script>
-</body>
-</html>
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Automatic Goal Completion</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap">
+    <style>
+        body {
+            font-family: "Potta One", cursive;
+            background-color: #fffbf7; /* Light cream */
+            margin: 0;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+        #container {
+            text-align: center;
+            background-color: #fff; /* White */
+            padding: 20px;
+            border-radius: 20px; /* Rounded corners */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Soft shadow */
+        }
+        video {
+            border-radius: 20px; /* Rounded corners for video */
+            margin-bottom: 20px;
+        }
+        p {
+            margin: 10px 0;
+            font-size: 22px; /* Larger font size */
+            color: #333; /* Dark gray */
+        }
+        #status {
+            font-weight: bold;
+            font-size: 24px; /* Larger font size for status */
+        }
+        .completed {
+            color: #4CAF50; /* Green */
+        }
+        .not-completed {
+            color: #f44336; /* Red */
+        }
+    </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
 </head>
 <body>
-    <p>Goal: Drink Water</p>
-    <p>Status: <span id="status">Not Completed</span></p>
-    <video id="video" width="640" height="480" autoplay></video>
+    <div id="container">
+        <p>Goal: Drink Water</p>
+        <p>Status: <span id="status" class="not-completed">Not Completed</span></p>
+    </div>
 
     <script>
         let mobilenet;
+        let video;
+        let label = '';
         let goalCompleted = false;
 
-        async function modelReady() {
+        function modelReady() {
             console.log('Model is ready!!!');
             mobilenet.predict(gotResults);
         }
 
-        async function gotResults(error, results) {
+        function gotResults(error, results) {
             if (error) {
                 console.error(error);
             } else {
@@ -101,9 +76,13 @@
                     // Check if the goal is detected
                     if (label.toLowerCase().includes('water')) {
                         document.getElementById('status').innerText = 'Completed';
+                        document.getElementById('status').classList.remove('not-completed');
+                        document.getElementById('status').classList.add('completed');
                         goalCompleted = true;
                     } else {
                         document.getElementById('status').innerText = 'Not Completed';
+                        document.getElementById('status').classList.remove('completed');
+                        document.getElementById('status').classList.add('not-completed');
                     }
                 }
 
@@ -117,72 +96,14 @@
         function setup() {
             createCanvas(640, 480);
             video = createCapture(VIDEO);
-                //console.log('Video is ready!!!');
-                video.hide(); // Hide the video element after it's initialized
-                background(0); // Draw a background after hiding the video
-                mobilenet = ml5.imageClassifier('MobileNet', video, modelReady);
-        }
-
-        function draw() {
-            // This function is empty as we're not actively drawing anything
-            // The video frame is drawn automatically by p5.js
-            image(video, 0, 0);
-            fill(0);
-            textSize(32);
-            text(label, 10, height - 100);
-        }
-    </script>
-</body>
-</html>
-
-
- -->
-
- <!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Classification with ml5.js</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
-</head>
-<body>
-    <script>
-        let mobilenet;
-        let video;
-        let label = '';
-
-        function modelReady() {
-            console.log('Model is ready!!!');
-            mobilenet.predict(gotResults);
-        }
-
-        function gotResults(error, results) {
-            if (error) {
-                console.error(error);
-            } else {
-                console.log(results);
-                label = results[0].className;
-                //let prob = results[0].probability;
-                mobilenet.predict(gotResults);
-            }
-        }
-
-        function setup() {
-            createCanvas(640, 480);
-            video = createCapture(VIDEO);
             video.hide();
-            background(0);
+            background(255); /* White background */
             mobilenet = ml5.imageClassifier('MobileNet', video, modelReady);
         }
 
         function draw() {
             image(video, 0, 0);
-            fill(0);
-            textSize(32);
-            text(label, 10, height - 100);
         }
     </script>
 </body>
-</html> -->
+</html>
