--- a/Workout/fitness.html
+++ b/Workout/fitness.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Automatic Goal Completion</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap">
     <style>
         body {
-            font-family: "Potta One", cursive;
+            font-family: "Arial", cursive;
             background-color: #fffbf7; /* Light cream */
             margin: 0;
             padding: 20px;
@@ -19,7 +18,7 @@
         }
         #container {
             text-align: center;
-            background-color: #fff; /* White */
+            background-color: #fffbf7; /* White */
             padding: 20px;
             border-radius: 20px; /* Rounded corners */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Soft shadow */
@@ -35,7 +34,7 @@
         }
         #status {
             font-weight: bold;
-            font-size: 24px; /* Larger font size for status */
+            font-size: 22px; /* Larger font size for status */
         }
         .completed {
             color: #4CAF50; /* Green */
@@ -43,14 +42,29 @@
         .not-completed {
             color: #f44336; /* Red */
         }
+        button {
+            background-color: #f44336; /* Green */
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 10px;
+            cursor: pointer;
+            border-radius: 10px;
+        }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
 </head>
 <body>
     <div id="container">
-        <p>Goal: Lift Weights</p>
+        <p>Goal: Weight Lifting</p>
         <p>Status: <span id="status" class="not-completed">Not Completed</span></p>
+        <button onclick="goToHomePage()">Back to Boost</button>
+        <button onclick="goToAnotherGoalPage()">Next Goal!</button>
     </div>
 
     <script>
@@ -104,78 +118,17 @@
         function draw() {
             image(video, 0, 0);
         }
-    </script>
-</body>
-</html>
 
-
-
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Classification with ml5.js</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
-</head>
-<body>
-    <p>Goal: Weight Lifting</p>
-    <p>Status: <span id="status">Not Completed</span></p>
-    <video id="video" width="640" height="480" autoplay></video>
-
-    <script>
-        let mobilenet;
-        let video;
-        let label = '';
-        let goalCompleted = false;
-
-        function modelReady() {
-            console.log('Model is ready!!!');
-            mobilenet.predict(gotResults);
+        function goToHomePage() {
+            // Redirect to the home page URL
+            window.location.href = 'home.html';
         }
 
-        function gotResults(error, results) {
-            if (error) {
-                console.error(error);
-            } else {
-                console.log(results);
-                if (results && results.length > 0 && results[0].label) {
-                    const label = results[0].label;
-                    console.log('Detected label:', label);
-
-                    // Check if the goal is detected
-                    if (label.toLowerCase().includes('dumbbell')) {
-                        document.getElementById('status').innerText = 'Completed';
-                        goalCompleted = true;
-                    } else {
-                        document.getElementById('status').innerText = 'Not Completed';
-                    }
-                }
-
-                // Call predict again
-                if (!goalCompleted) {
-                    mobilenet.predict(gotResults);
-                }
-            }
-        }
-
-        function setup() {
-            createCanvas(640, 480);
-            video = createCapture(VIDEO);
-            video.hide();
-            background(0);
-            mobilenet = ml5.imageClassifier('MobileNet', video, modelReady);
-        }
-
-        function draw() {
-            image(video, 0, 0);
-            fill(0);
-            textSize(32);
-            text(label, 10, height - 100);
+        function goToAnotherGoalPage() {
+            // Redirect to another goal page URL
+            window.location.href = 'another_goal.html';
         }
     </script>
 </body>
 </html>
- -->
+
